# dude

./: Cargo.toml  LICENSE  README.md
src/: chat.rs  config.rs  main.rs
src/provider/: anthropic.rs  gemini.rs  groq.rs  mod.rs  openai.rs
src/tui/: input.rs  mod.rs  view.rs
