[package]
name = "dude"
version = "0.1.0"
edition = "2021"
description = "A short, model-agnostic AI chat wrapper for the terminal."
license = "MIT"

[[bin]]
name = "dude"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
directories = "5"